@@ -1,5 +1,6 @@
 2.32	Added a GD::Simple->HSVtoRGB() method.
 	Documentation fixes from Mark Manning.
+	Added a clear() method to GD::Polygon to remove all vertices.
 2.31	Fixed GD::Simple->transparent to support symbolic color names.
 	Made changes that should render the module thread-safe.
 	Changed newSVpv calls to newSVpvn, in hopes of improving performance.
